==> luk6xff/MeteoStation/RxModuleTI/RF22.c <==
#include <stdlib.h>
#include <string.h>
#include <math.h>
#include "spiCommon.h"
#include "RF22.h"
#define RF22_FLAGS_ACK 0x80
#include "inc/hw_types.h"
#include "inc/hw_memmap.h"
#include "inc/hw_ints.h"
#include "driverlib/gpio.h"
#include "driverlib/sysctl.h"
#include "driverlib/interrupt.h"
#include "driverlib/timer.h"

static uint8_t spiWriteReadByte(uint8_t val)
{
	uint8_t retVal = 0xFF; // ivalid value
	SSIDataPut(SSI0_BASE, val);
	while (SSIBusy(SSI0_BASE))
	{}
	SSIDataGet(SSI0_BASE, &retVal);
	return retVal;
}
