==> luk6xff/MeteoStation/TxModuleSTM/Src/RF22.c <==
#include <stdlib.h>
#include <string.h>
#include <math.h>
#include "RF22.h"
#define RF22_FLAGS_ACK 0x80
#define DISABLE_ALL_INTERRUPTS()  { prim_status = __get_PRIMASK(); __disable_irq(); }
#define ENABLE_ALL_INTERRUPTS() { if (!prim_status) { __enable_irq();} }
#include "tim.h"

static uint8_t spiWriteReadByte(uint8_t val)
{
	uint8_t retVal = 0xFA; // ivalid value
	switch(HAL_SPI_TransmitReceive(&hspi1, &val, &retVal, 1, 1000))
	{
		case HAL_OK:
			/* Communication is completed */
			break;

		case HAL_TIMEOUT:
			/* A Timeout occured*/
			break;

		case HAL_ERROR:
			break;

		default:
			break;
	}
	return retVal;
}
